Правит стили модалки на планшете и мобильном

--- a/source/sass/blocks/special-popup.scss
+++ b/source/sass/blocks/special-popup.scss
@@ -97,6 +97,7 @@
   margin-bottom: 48px;
 
   @include tablet {
+    width: 100%;
     margin-bottom: 56px;
     overflow: hidden;
   }
@@ -115,21 +116,19 @@
 }
 
 .special-popup__list {
+  @include list-reset;
+
   position: relative;
-
   display: flex;
-  // flex-wrap: wrap;
-  margin: 0;
-  // padding: 0;
-  padding: 0 0 24px;
-
-  list-style: none;
-
+  padding-bottom: 24px;
   border-bottom: 1px solid var(--color-stroke, $light-grey);
 
   @include tablet {
-    width: fit-content;
-    min-width: 100%;
+    flex-wrap: wrap;
+    padding-bottom: 0;
+    margin-top: -13px;
+    margin-left: -13px;
+    border-bottom: none;
   }
 
   &--font {
@@ -137,14 +136,16 @@
 
     .special-popup__item:not(:last-child) {
       margin-right: 32px;
+
+      @include tablet {
+        margin-right: 0;
+      }
     }
   }
 }
 
 .special-popup__item {
   flex-shrink: 0;
-  // padding-bottom: 24px;
-  // border-bottom: 1px solid var(--color-stroke, $light-grey);
 
   &:not(:last-child) {
     margin-right: 16px;
@@ -153,6 +154,15 @@
   span {
     pointer-events: none;
   }
+
+  @include tablet {
+    margin-top: 13px;
+    margin-left: 13px;
+
+    &:not(:last-child) {
+      margin-right: 0;
+    }
+  }
 }
 
 .special-popup__name {
@@ -160,15 +170,9 @@
 
   font-size: rem(18px);
   line-height: 1.3;
-}
 
-.special-popup__scroll-wrap {
   @include tablet {
-    max-width: 100%;
-    margin-bottom: -30px;
-    padding-bottom: 30px;
-    overflow-x: scroll;
-    -webkit-overflow-scrolling: touch;
+    margin: 0;
   }
 }
 
@@ -224,6 +228,14 @@
       height: 5px;
 
       background-color: var(--color-interactive-default, $blue-default);
+    }
+  }
+
+  @include tablet {
+    &.active {
+      &::after {
+        bottom: -1px;
+      }
     }
   }
 }
@@ -285,6 +297,14 @@
     background-color: $brown;
     border-color: $brown;
   }
+
+  @include tablet {
+    &.active {
+      &::after {
+        bottom: -1px;
+      }
+    }
+  }
 }
 
 .special-popup__btn-font {
@@ -301,6 +321,18 @@
       height: 5px;
 
       background-color: var(--color-interactive-default, $blue-default);
+    }
+  }
+
+  @include tablet {
+    padding: 13px;
+    border: 1px solid var(--color-interactive-default, $blue-default);
+    border-radius: $border-radius;
+
+    &.active {
+      &::after {
+        bottom: -1px;
+      }
     }
   }
 }
