--- a/source/sass/blocks/special-popup.scss
+++ b/source/sass/blocks/special-popup.scss
@@ -1,5 +1,5 @@
 .special-popup {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 110;
@@ -9,6 +9,11 @@
 
   &.js-hide {
     display: none;
+  }
+
+  @include tablet {
+    height: 100%;
+    overflow: auto;
   }
 }
 
@@ -203,7 +208,7 @@
 
   background-color: $light-grey;
   border: 1px solid $light-grey;
-  border-radius: 4px;
+  border-radius: $border-radius;
 
   &--default {
     font-size: 18px;
@@ -222,11 +227,9 @@
       content: "";
       position: absolute;
       bottom: -26px;
-      left: 0;
-
-      width: 100%;
+      left: -1px;
+      right: -1px;
       height: 5px;
-
       background-color: var(--color-interactive-default, $blue-default);
     }
   }
@@ -235,6 +238,8 @@
     &.active {
       &::after {
         bottom: -1px;
+        border-bottom-left-radius: $border-radius;
+        border-bottom-right-radius: $border-radius;
       }
     }
   }
@@ -245,7 +250,7 @@
 
   border-width: 1px;
   border-style: solid;
-  border-radius: 4px;
+  border-radius: $border-radius;
 
   &.active {
     border-color: var(--color-text, $dark-text);
@@ -254,11 +259,9 @@
       content: "";
       position: absolute;
       bottom: -26px;
-      left: 0;
-
-      width: 100%;
+      left: -1px;
+      right: -1px;
       height: 5px;
-
       background-color: var(--color-interactive-default, $blue-default);
     }
   }
@@ -302,6 +305,8 @@
     &.active {
       &::after {
         bottom: -1px;
+        border-bottom-left-radius: $border-radius;
+        border-bottom-right-radius: $border-radius;
       }
     }
   }
@@ -315,11 +320,9 @@
       content: "";
       position: absolute;
       bottom: -21px;
-      left: 0;
-
-      width: 100%;
+      left: -1px;
+      right: -1px;
       height: 5px;
-
       background-color: var(--color-interactive-default, $blue-default);
     }
   }
@@ -332,6 +335,8 @@
     &.active {
       &::after {
         bottom: -1px;
+        border-bottom-left-radius: $border-radius;
+        border-bottom-right-radius: $border-radius;
       }
     }
   }
