--- a/source/sass/blocks/text-hidden.scss
+++ b/source/sass/blocks/text-hidden.scss
@@ -22,6 +22,22 @@
   }
 }
 
+.text-hidden__container-popup {
+  max-height: 54px;
+  overflow: hidden;
+  transition: max-height $style-change-duration;
+
+  @media (max-width: $mobile-max-width) {
+    max-height: 81px;
+  }
+
+  &--open {
+    max-height: 100%;
+    transition: max-height $style-change-duration;
+  }
+}
+
+
 .text-hidden__btn {
   &--open {
     & svg {
