--- a/source/sass/blocks/special-popup.scss
+++ b/source/sass/blocks/special-popup.scss
@@ -125,7 +125,7 @@
   @include list-reset;
 
   position: relative;
-  display: flex;
+  display: inline-flex;
   padding-bottom: 24px;
   border-bottom: 1px solid var(--color-stroke, $light-grey);
 
