--- a/source/sass/blocks/project-page.scss
+++ b/source/sass/blocks/project-page.scss
@@ -77,7 +77,7 @@
 .project-page__survey-container {
   padding-bottom: 34px;
   margin-bottom: 24px;
-  border-bottom: 1px solid $light-grey;
+  border-bottom: 1px solid var(--color-stroke, $light-grey);
 
   .form-radio:last-child {
     margin-bottom: 0;
