--- a/source/sass/blocks/projects.scss
+++ b/source/sass/blocks/projects.scss
@@ -32,7 +32,7 @@
   }
 
   .counter--hidden + .projects__filter-main {
-    border-top: 1px solid $light-grey;
+    border-top: 1px solid var(--color-stroke, $light-grey);
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
   }
