Добавляет пустую страницу, цвета

--- a/source/sass/blocks/discussion-item.scss
+++ b/source/sass/blocks/discussion-item.scss
@@ -114,6 +114,6 @@
 
   &:hover,
   &:focus {
-    color: var(--color-text, $grey-default);
+    color: var(--color-interactive-default, $blue-default);
   }
 }
