--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -39,6 +39,7 @@
 @import "blocks/special-popup";
 @import "blocks/project-link";
 @import "blocks/status-info";
+@import "blocks/main-empty";
 
 // main page
 @import "blocks/news-notice";
