--- a/source/sass/blocks/poll.scss
+++ b/source/sass/blocks/poll.scss
@@ -1,7 +1,6 @@
 .poll {
   box-sizing: border-box;
   padding: 96px 40px 0;
-
   text-align: center;
 
   @media (max-width: $desktop-width - 81) {
@@ -25,7 +24,6 @@
   justify-content: space-between;
   margin: 0;
   padding: 40px 0 4px;
-
   list-style: none;
   text-align: left;
 
@@ -42,17 +40,14 @@
 
 .poll__item {
   position: relative;
-
   flex-shrink: 0;
   width: 32.1%;
   margin-bottom: 20px;
   padding: 24px;
   padding-bottom: 29px;
-
   background-color: var(--color-bg-secondary, $color-bg);
   border-radius: $border-radius;
   cursor: pointer;
-
   transition: box-shadow $style-change-duration linear;
 
   @media (max-width: $desktop-width - 81) {
@@ -68,13 +63,10 @@
     position: absolute;
     right: 0;
     bottom: 24px;
-
     width: 100%;
     height: 40px;
-
-    background-image: linear-gradient(180deg, var(--color-bg-secondary) 0%, var(--color-bg-secondary-transparent) 100%);
+    background-image: linear-gradient(180deg, var(--color-bg-secondary, $color-bg) 0%, var(--color-bg-secondary-transparent, rgba($color-bg, 0)) 100%);
     transform: matrix(1, 0, 0, -1, 0, 0);
-
     transition: bottom $style-change-duration linear;
   }
 
@@ -92,7 +84,7 @@
   border: 1px solid var(--color-stroke, $light-grey);
 
   &::before {
-    background-image: linear-gradient(180deg, var(--color-bg-main) 0%, var(--color-bg-main-transparent) 100%);
+    background-image: linear-gradient(180deg, var(--color-bg-main, $white) 0%, var(--color-bg-main-transparent, rgba($white, 0)) 100%);
   }
 
   &::after {
@@ -100,13 +92,10 @@
     position: absolute;
     right: 0;
     bottom: 0;
-
     padding: 4px 8px;
-
     font-size: rem(13px);
     line-height: 1.3;
     color: var(--color-text, $grey-default);
-
     background-color: var(--color-tag, $light-grey);
     border-radius: $border-radius 0;
     opacity: 0.5;
@@ -114,7 +103,7 @@
 
   &:hover {
     &::before {
-      background-image: linear-gradient(180deg, var(--color-bg-secondary) 0%, var(--color-bg-secondary-transparent) 100%);
+      background-image: linear-gradient(180deg, var(--color-bg-secondary, $color-bg) 0%, var(--color-bg-secondary-transparent, rgba($color-bg, 0)) 100%);
     }
   }
 
@@ -131,7 +120,6 @@
 .poll__text {
   margin: 0;
   padding: 0;
-
   font-size: rem(16px);
   line-height: 1.35;
 }
@@ -140,14 +128,12 @@
   position: absolute;
   bottom: 0;
   left: 0;
-
   display: none;
   width: 100%;
   padding-top: 46px;
   padding-bottom: 14px;
   padding-left: 24px;
-
-  background-image: linear-gradient(var(--color-bg-secondary-transparent), var(--color-bg-secondary) 35px);
+  background-image: linear-gradient(var(--color-bg-secondary-transparent, rgba($color-bg, 0)), var(--color-bg-secondary, $color-bg) 35px);
   border-radius: $border-radius;
 }
 
