--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -19,7 +19,7 @@
 
 .page-content__archive-link {
   margin-top: 80px;
-  margin-bottom: 80px;
+  margin-bottom: 0;
 }
 
 
@@ -30,7 +30,6 @@
 
   .page-content__archive-link {
     margin-top: 64px;
-    margin-bottom: 88px;
   }
 }
 
@@ -55,6 +54,5 @@
 
   .page-content__archive-link {
     margin-top: 57px;
-    margin-bottom: 64px;
   }
 }
