--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,8 +36,9 @@
 @import "blocks/page-nav";
 @import "blocks/page-top";
 @import "blocks/archive-link";
+@import "blocks/article-link";
+@import "blocks/video-link";
 @import "blocks/special-popup";
-@import "blocks/project-link";
 @import "blocks/status-info";
 @import "blocks/main-empty";
 
