--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -95,53 +95,9 @@
     }
   }
 
-  a:not([class]) {
-    display: flex;
-    align-items: flex-start;
+  .article-link,
+  .video-link {
     margin-bottom: 48px;
-    font-size: rem(18px);
-    line-height: rem(23px);
-    text-decoration: none;
-    user-select: none;
-    color: var(--color-interactive-default, $blue-default);
-    outline: none;
-    transition: color $style-change-duration;
-
-    &::before {
-      content: "";
-      display: block;
-      flex-shrink: 0;
-      width: 20px;
-      height: 20px;
-      margin-right: 8px;
-      background-image: url("../img/icon-link.svg");
-      background-size: cover;
-    }
-
-    &:focus {
-      color: var(--color-interactive-accent, $blue-accent);
-    }
-
-    &:focus:not(.focus-visible) {
-      color: var(--color-interactive-default, $blue-default);
-    }
-
-    &:hover:not(.focus-visible) {
-      color: var(--color-interactive-accent, $blue-accent);
-    }
-  }
-
-  a[href*="youtube"]:not([class]) {
-    padding: 23px;
-    border: 1px solid var(--color-stroke, $light-grey);
-    border-radius: $border-radius;
-
-    &::before {
-      width: 24px;
-      height: 24px;
-      margin-right: 12px;
-      background-image: url("../img/icon-youtube.svg");
-    }
   }
 
 
@@ -152,7 +108,8 @@
     img:not([class]),
     iframe:not([class]),
     ul:not([class]),
-    a:not([class]),
+    .article-link,
+    .video-link,
     .highlighted-text {
       width: calc(100% - 2 * #{$tablet-padding});
       margin-right: $tablet-padding;
@@ -168,16 +125,6 @@
     h1:not([class]) {
       margin-bottom: 32px;
     }
-
-    a:not([class]) {
-      &:hover:not(.focus-visible) {
-        color: var(--color-interactive-default, $blue-default);
-      }
-
-      &:active:not(.focus-visible) {
-        color: var(--color-interactive-accent, $blue-accent);
-      }
-    }
   }
 
 
@@ -188,7 +135,8 @@
     img:not([class]),
     iframe:not([class]),
     ul:not([class]),
-    a:not([class]),
+    .article-link,
+    .video-link,
     .highlighted-text {
       width: calc(100% - 2 * #{$mobile-padding});
       margin-right: $mobile-padding;
@@ -220,14 +168,9 @@
       margin-bottom: 40px;
     }
 
-    a:not([class]) {
-      display: block;
+    .article-link,
+    .video-link {
       margin-bottom: 32px;
-
-      &::before {
-        margin-right: 0;
-        margin-bottom: 16px;
-      }
     }
   }
 }
