--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,7 @@
 @import "blocks/form-range";
 @import "blocks/form";
 @import "blocks/filter";
+@import "blocks/filter-vote";
 @import "blocks/counter";
 @import "blocks/paginator";
 @import "blocks/button-star";
