--- a/source/sass/blocks/project-item.scss
+++ b/source/sass/blocks/project-item.scss
@@ -78,7 +78,6 @@
       &:focus:not(.focus-visible),
       &:hover:not(.focus-visible) {
         color: var(--color-text, $grey-default);
-        box-shadow: 0 0 0 rgba(0, 30, 75, 0);
       }
     }
   }
@@ -147,12 +146,6 @@
   opacity: 1;
 }
 
-.project-item--disabled .button-star,
-.project-item--disabled .project-item__link:focus + .button-star,
-.project-item--disabled .project-item__link:hover + .button-star {
-  opacity: 0;
-}
-
 
 @include tablet {
   .project-item {
@@ -201,7 +194,7 @@
 }
 
 
-@include tablet {
+@include mobile {
   .project-item {
     width: 288px;
   }
