--- a/source/sass/blocks/project-vote.scss
+++ b/source/sass/blocks/project-vote.scss
@@ -5,7 +5,10 @@
 
 .project-vote__container {
   padding: 24px;
-  border-bottom: 1px solid var(--color-stroke, $light-grey);
+
+  &:not(:last-child) {
+    border-bottom: 1px solid var(--color-stroke, $light-grey);
+  }
 
   &--meta {
     display: flex;
