--- a/source/components/footer.html
+++ b/source/components/footer.html
@@ -4,29 +4,29 @@
       <ul class="page-footer__list">
         <li class="page-footer__item">
           <span>Сайт Президента Российской Федерации</span>
-          <a class="link link--blue" href="http://kremlin.ru/" target="_blank">kremlin.ru</a>
+          <a href="http://kremlin.ru/" target="_blank">kremlin.ru</a>
         </li>
         <li class="page-footer__item">
           <span>Сайт Правительства Российской Федерации</span>
-          <a class="link link--blue" href="http://government.ru/" target="_blank">government.ru</a>
+          <a href="http://government.ru/" target="_blank">government.ru</a>
         </li>
         <li class="page-footer__item">
           <span>Государственная дума Российской Федерации</span>
-          <a class="link link--blue" href="http://duma.gov.ru/" target="_blank">duma.gov.ru</a>
+          <a href="http://duma.gov.ru/" target="_blank">duma.gov.ru</a>
         </li>
       </ul>
       <ul class="page-footer__list">
         <li class="page-footer__item">
           <span>Портал государственных услуг</span>
-          <a class="link link--blue" href="http://gosuslugi.ru/" target="_blank">gosuslugi.ru</a>
+          <a href="http://gosuslugi.ru/" target="_blank">gosuslugi.ru</a>
         </li>
         <li class="page-footer__item">
           <span>Единый портал раскрытия информации о подготовке проектов нормативных актов</span>
-          <a class="link link--blue" href="http://regulation.gov.ru/" target="_blank">regulation.gov.ru</a>
+          <a href="http://regulation.gov.ru/" target="_blank">regulation.gov.ru</a>
         </li>
         <li class="page-footer__item">
           <span>Официальный интернет-портал правовой информации</span>
-          <a class="link link--blue" href="http://pravo.gov.ru/" target="_blank">pravo.gov.ru</a>
+          <a href="http://pravo.gov.ru/" target="_blank">pravo.gov.ru</a>
         </li>
       </ul>
     </div>
