--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -23,10 +23,19 @@
   box-shadow: 0 4px 10px rgba(46, 67, 102, 0.1);
 }
 
-.page-header__roi-logo {
+.page-header__roi-logo svg {
   display: block;
   width: 180px;
   height: 56px;
+  fill: none;
+}
+
+.mod-theme-inverse .page-header__roi-logo path,
+.mod-theme-blue .page-header__roi-logo path,
+.mod-theme-comfort .page-header__roi-logo path,
+.mod-theme-brown .page-header__roi-logo path {
+  fill: var(--color-text);
+  stroke: var(--color-text);
 }
 
 .page-header__site-name {
@@ -112,7 +121,7 @@
     }
   }
 
-  .page-header__roi-logo {
+  .page-header__roi-logo svg {
     width: 174px;
     height: 55px;
   }
@@ -137,7 +146,7 @@
 
 
 @include mobile {
-  .page-header__roi-logo {
+  .page-header__roi-logo svg {
     width: 124px;
     height: 40px;
   }
