--- a/source/sass/blocks/activity-tabs.scss
+++ b/source/sass/blocks/activity-tabs.scss
@@ -24,6 +24,12 @@
   flex-wrap: no-wrap;
   width: 100%;
   overflow-x: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    width: 0;
+  }
 
   @media (max-width: 800px) {
     padding: 0 24px;
@@ -41,6 +47,10 @@
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: 100% 1px;
+
+  @media (max-width: 815px) {
+    margin-top: -19px;
+  }
 
   @media (max-width: 800px) {
     width: calc(100% - 48px);
