--- a/source/sass/blocks/discussion-item.scss
+++ b/source/sass/blocks/discussion-item.scss
@@ -86,6 +86,7 @@
 .discussion-item__link {
   display: flex;
   align-items: center;
+  margin-right: 20px;
 
   @include main-text;
   font-weight: 500;
@@ -95,10 +96,13 @@
   transition: color $style-change-duration;
 
   & svg {
+    height: 16px;
+    flex-shrink: 0;
     margin-right: 8px;
   }
 
   &--add {
+    align-items: flex-start;
     margin-left: auto;
     margin-right: 22px;
     font-weight: 400;
@@ -108,6 +112,7 @@
     }
 
     & svg {
+      margin-top: rem(2px);
       margin-right: 5px;
     }
   }
