--- a/source/sass/blocks/news-notice.scss
+++ b/source/sass/blocks/news-notice.scss
@@ -155,11 +155,11 @@
   &--news {
     width: 360px;
     margin-top: 24px;
-    margin-bottom: 40px;
+    // margin-bottom: 40px;
 
     @media (max-width: $mobile-max-width) {
       width: 100%;
-      margin-bottom: 32px;
+      // margin-bottom: 32px;
     }
   }
 }
