--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -18,7 +18,7 @@
 }
 
 .page-content__archive-link {
-  margin-top: 80px;
+  // margin-top: 80px;
   margin-bottom: 80px;
 }
 
@@ -29,7 +29,7 @@
   }
 
   .page-content__archive-link {
-    margin-top: 64px;
+    // margin-top: 64px;
     margin-bottom: 88px;
   }
 }
@@ -54,7 +54,7 @@
   }
 
   .page-content__archive-link {
-    margin-top: 57px;
+    // margin-top: 57px;
     margin-bottom: 64px;
   }
 }
