--- a/source/sass/blocks/paginator.scss
+++ b/source/sass/blocks/paginator.scss
@@ -3,6 +3,8 @@
   flex-wrap: wrap;
   width: 545px;
   margin: 0 auto;
+  margin-top: 40px;
+  margin-bottom: 80px;
 
   font-size: rem(15px);
   line-height: rem(27px);
@@ -13,6 +15,19 @@
 
   @media (max-width: 400px) {
     width: 288px;
+    margin-top: 32px;
+  }
+}
+
+@include tablet {
+  .paginator {
+    margin-bottom: 64px;
+  }
+}
+
+@include mobile {
+  .paginator {
+    margin-bottom: 57px;
   }
 }
 
