Добавляет js-классы

--- a/source/components/special-popup.html
+++ b/source/components/special-popup.html
@@ -97,6 +97,6 @@
       </div>
     </div>
 
-    <button type="button" class="special-popup__reset button button--blue" disabled>Сбросить всё</button>
+    <button type="button" class="special-popup__reset js-special-popup__reset button button--blue" disabled>Сбросить всё</button>
   </div>
 </section>
