--- a/source/components/up-btn.html
+++ b/source/components/up-btn.html
@@ -1,4 +1,4 @@
-<button class="page-body__up-btn" type="button">
+<button class="page-body__up-btn js-page-body__up-btn" type="button">
   <svg width="20" height="12" viewBox="0 0 33 12">
     <use xlink:href="img/sprite.svg#icon-arrow"></use>
   </svg>
