Добавляет изменение размера и положения кнопки "наверх" в спец.версии

--- a/source/components/cookie.html
+++ b/source/components/cookie.html
@@ -9,6 +9,6 @@
       </p>
     </div>
 
-    <button type="button" class="cookie__button button button--blue js_btn">Согласен</button>
+    <button type="button" class="cookie__button js-cookie__button button button--blue">Согласен</button>
   </div>
 </div>
