Добавляет стили для печати

--- a/source/sass/blocks/activity-tabs.scss
+++ b/source/sass/blocks/activity-tabs.scss
@@ -110,3 +110,9 @@
   background-repeat: no-repeat;
   background-size: 100% 2px;
 }
+
+@media print {
+  .activity-tabs__list {
+    display: none;
+  }
+}
