--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -58,3 +58,10 @@
     margin-bottom: 64px;
   }
 }
+
+@media print {
+  .page-content__archive-link,
+  .page-content .list-btn {
+    display: none;
+  }
+}
