--- a/source/sass/blocks/news-notice.scss
+++ b/source/sass/blocks/news-notice.scss
@@ -175,3 +175,10 @@
     display: block;
   }
 }
+
+@media print {
+  .news-notice__item {
+    page-break-inside: avoid;
+    break-inside: avoid;
+  }
+}
