--- a/source/sass/blocks/status-info.scss
+++ b/source/sass/blocks/status-info.scss
@@ -12,8 +12,7 @@
   }
 }
 
-.mod-theme-inverse .status-info,
-.mod-theme-brown .status-info {
+.mod-theme-inverse .status-info {
   color: var(--color-bg-main);
 }
 
