add header on main page for print

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -185,8 +185,13 @@
     display: none;
   }
 
-  @page :first {
+  .page-body {
+    padding-top: 0 !important;
+  }
+
+  .page-main {
     .page-header {
+      position: static;
       display: block;
     }
   }
