--- a/source/sass/blocks/poll.scss
+++ b/source/sass/blocks/poll.scss
@@ -76,8 +76,14 @@
 
     .poll__link {
       display: block;
+    }
+  }
 
-      @media (max-width: $desktop-width - 1) {
+  @media (max-width: $desktop-width - 1) {
+    &:hover {
+      box-shadow: none;
+
+      .poll__link {
         display: none;
       }
     }
@@ -109,6 +115,14 @@
   &:hover {
     &::before {
       background-image: linear-gradient(180deg, var(--color-bg-secondary, $color-bg) 0%, var(--color-bg-secondary-transparent, rgba($color-bg, 0)) 100%);
+    }
+  }
+
+  @media (max-width: $desktop-width - 1) {
+    &:hover {
+      &::before {
+        display: none;
+      }
     }
   }
 
