Исправляет версию печати

--- a/source/sass/blocks/button-star.scss
+++ b/source/sass/blocks/button-star.scss
@@ -16,3 +16,9 @@
     color: var(--color-interactive-default, $blue-default);
   }
 }
+
+@media print {
+  .button-star {
+    display: none;
+  }
+}
