--- a/source/sass/blocks/project.scss
+++ b/source/sass/blocks/project.scss
@@ -175,7 +175,8 @@
 @media print {
   .project__archive-link,
   .project__archive-mobile,
-  .project__button {
+  .project__button,
+  .project__info {
     display: none;
   }
 
