--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -90,12 +90,14 @@
 @import "blocks/discussion-list";
 @import "blocks/answers";
 @import "blocks/text-hidden";
+@import "blocks/table-fixed";
 
 // comment popup
 @import "blocks/comment-popup";
 @import "blocks/comment-add";
 @import "blocks/all-comments";
 @import "blocks/your-comment";
+@import "blocks/table-popup";
 
 // activity
 @import "blocks/activity";
