--- a/source/sass/blocks/discussion-item.scss
+++ b/source/sass/blocks/discussion-item.scss
@@ -34,6 +34,46 @@
 
     margin: 0;
   }
+
+  &--table {
+    position: relative;
+    max-height: 463px;
+  }
+}
+
+.discussion-item__screen-btn {
+  @include btn-reset;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  color: var(--color-text, $dark);
+  background-color: var(--color-bg-secondary, $white);
+  border: 1px solid $light-grey;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  transition: background-color $style-change-duration;
+
+  &:hover,
+  &:focus {
+    background-color: var(--color-bg-secondary, $blue-accent);
+    color: var(--color-text, $white);
+    cursor: pointer;
+    outline: none;
+  }
+
+  &[data-tooltip] {
+    position: absolute;
+  }
+
+  &[data-tooltip]::after {
+    min-width: 150px;
+  }
 }
 
 .discussion-item__img-wrapper {
