--- a/source/sass/blocks/your-comment.scss
+++ b/source/sass/blocks/your-comment.scss
@@ -15,12 +15,13 @@
 
   &--table {
     position: relative;
+    padding-bottom: 22px;
 
     &::before {
       content: "";
       position: absolute;
       right: 0;
-      bottom: 48px;
+      bottom: 30px;
       z-index: 10;
       width: 100%;
       height: 16px;
